--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@ Topuk yüksekliği: 8,5 cm</p>
 <div class="footer">
     <p>Zara'da tüm haklar saklıdır.</p>
     <p>Bu sayfa tamamen öğrenme amaclı yapılmıştır.</p>
-    <a herf="https://www.zara.com" target="_blank">ZARA</a>
+    <a href="https://www.zara.com" target="_blank">ZARA</a>
+     <a href="https://saglamaysegul92-hash.github.io/nursena-saglamANS.github.io/" target="_blank">ANASAYFA</a>
 </div>
 
  </div>
 </body>
+
 </html>
